# optscale

./: .dockerignore  .env.example  .gitignore  README.md  build.sh  generate_modules_json.sh  last_diff.txt  package-lock.json  package.json  playwright.config.ts  release.sh  results.json  tsconfig.json
.github/: CODEOWNERS
auth/: Dockerfile  pyproject.toml  requirements.txt  run_test.sh
bi_exporter/: Dockerfile  pyproject.toml
bulldozer/: run_test.sh
bumischeduler/: Dockerfile  pyproject.toml  requirements.txt
bumiworker/: Dockerfile  pyproject.toml
bumiworker/bumiworker/: tasks.py
bumiworker/bumiworker/modules/: base.py  rightsizing_base.py
bumiworker/bumiworker/modules/archive/: instance_generation_upgrade.py  s3_intelligent_tiering.py
bumiworker/bumiworker/modules/recommendations/: insecure_security_groups.py  instance_generation_upgrade.py  s3_intelligent_tiering.py  snapshots_with_non_used_images.py
diproxy/: Dockerfile  pyproject.toml  requirements.txt
diworker/: Dockerfile  pyproject.toml  requirements.txt
documentation/: periodic_jobs.md  setup_dev_vm.md
e2etests/: .env.example  .prettierignore  .prettierrc  Makeafile  README.md  eslint.config.mjs  package-lock.json  package.json  playwright-screenshot.sh  playwright.config.ts  playwright.devops.config.ts  playwright.flaky.config.ts  playwright.metrics.config.ts  playwright.regression.config.ts  playwright.screenshot.config.ts  run_pw.sh  tsconfig.json
ffc_api/: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile_tests  LICENSE.txt  QUICKSTART.md  README.md  alembic.ini  dev.Dockerfile  docker-compose.yaml  env.example  prod.Dockerfile  pyproject.toml  run_test.sh  sonar-project.properties
ffc_api/app/: conf.py  enums.py  main.py  pagination.py  rql.py  utils.py
ffc_api/app/auth/: auth.py  constants.py
ffc_api/app/db/: base.py  handlers.py  human_readable_pk.py  models.py
ffc_api/app/dependencies/: auth.py  core.py  db.py  path.py
ffc_api/app/optscale/: models.py
ffc_api/app/routers/: datasources.py  organizations.py  tags.py  users.py
ffc_api/app/schemas/: core.py  datasources.py  organizations.py  tags.py  users.py
ffc_api/app/services/: config_loader.py  roles_loader.py  tags.py  validators.py
ffc_api/ffc_api_server/: alembic.ini
ffc_api/ffc_api_server/app/: conf.py  enums.py  main.py  pagination.py  rql.py  utils.py
ffc_api/ffc_api_server/app/auth/: auth.py  client.py
ffc_api/ffc_api_server/app/clickhouse/: clients.py  data_converter.py  service.py
ffc_api/ffc_api_server/app/clients/: clickhouse.py  mongo.py  rest_api.py
ffc_api/ffc_api_server/app/db/: base.py  handlers.py  human_readable_pk.py  models.py
ffc_api/ffc_api_server/app/db/models/: ffc.py  optscale.py
ffc_api/ffc_api_server/app/dependencies/: auth.py  db.py  path.py
ffc_api/ffc_api_server/app/optscale/: models.py
ffc_api/ffc_api_server/app/routers/: datasources.py  organizations.py  tags.py  users.py
ffc_api/ffc_api_server/app/routers/admin/: datasources.py  organizations.py  tags.py  users.py
ffc_api/ffc_api_server/app/routers/client/: organizations.py
ffc_api/ffc_api_server/app/routers/ffc_client/: organizations.py
ffc_api/ffc_api_server/app/schemas/: core.py  datasources.py  organizations.py  tags.py  users.py
ffc_api/ffc_api_server/app/services/: config_loader.py  expenses.py  organizations.py  roles_loader.py  tags.py  users.py  validators.py
ffc_api/ffc_api_server/migrations/: env.py
ffc_api/ffc_api_server/migrations/versions/: 0f57303a227b_init_migration.py
ffc_api/migrations/: env.py
ffc_api/migrations/versions/: 0f57303a227b_init_migration.py
ffc_ngui/: .prettierrc.cjs  Dockerfile  Dockerfile_tests  package-lock.json  package.json  pnpm-lock.yaml  run_test.sh
herald/: Dockerfile  Dockerfile_tests  email_test_data.py  pyproject.toml  render_samples.py  requirements.txt  run_test.sh  send_templates.py  test-requirements.txt
insider/: Dockerfile_tests  run_test.sh
insider/insider_api/: Dockerfile  pyproject.toml  requirements.txt
insider/insider_api/controllers/: flavor_generation.py  flavor_price.py
insider/insider_api/handlers/v2/: architectures.py  flavor_prices.py
insider/insider_api/tests/unittests/: test_flavor_prices.py
jira_bus/: Dockerfile  pyproject.toml  requirements.txt
jira_bus/jira_bus_server/: server.py
jira_bus/jira_bus_server/models/: db_base.py  db_mysql.py
keeper/: Dockerfile  pyproject.toml  requirements.txt  test-requirements.txt
metroculus/: Dockerfile_tests  run_test.sh
metroculus/metroculus_worker/: Dockerfile  main.py  migrator.py  processor.py  pyproject.toml  requirements.txt
metroculus/metroculus_worker/migrations/: V1__initial.py  V2__k8s_metrics.py  V3__k8s_metrics_date_partitioning.py  V4__average_metrics_date_partitioning.py  V5__support_lb_average_metrics.py  V6__modify_average_metrics_metric.py  V7__added_requests_metric.py  base.py
ngui/: Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare-and-run.sh  run_test.sh
optscale-deploy/: Vagrantfile  components.yaml  requirements.txt  vm  vm.sh
regression-tests/: .env.example  .gitignore  (+8 more)
risp/risp_worker/: Dockerfile  migrator.py  pyproject.toml  worker.py
risp/risp_worker/migrations/: V1_ri_sp_usage.py  V2_cloud_res_id_in_offer_id.py  V3_cloud_res_id_in_resource_id.py  V4_normalization_factor_ri_sp_usage.py  V5_uncovered_usage.py  V6_expected_cost_ri_sp_usage.py  V7_sp_rate_instance_type_in_ri_sp_usage.py  base.py
risp/risp_worker/processors/: azure.py
tools/db/: pyproject.toml  run_test.sh
tools/db/src/db/: __main__.py  cli.py  utils.py
tools/db/src/db/migrators/: __init__.py  alembic.py  base.py  clickhouse.py  mongo.py
tools/db/tests/: test_utils.py
tools/optscale_telemetry/: Dockerfile_tests  __init__.py  pyproject.toml
tools/optscale_telemetry/tests/: test_clickhouse_instrumentor.py  test_kombu_instrumentor.py  test_otel_config.py
tools/optscale_telemetry/tools/optscale_telemetry/: __init__.py  clickhouse_instrumentor.py  kombu_instrumentor.py  otel_config.py  utils.py
(+1793 files in other folders)
