[project]
name = "bumiworker"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "boto3==1.34.7",
    "clickhouse-connect==0.8.15",
    "cloud-adapter",
    "config-client",
    "herald-client",
    "insider-client",
    "kombu==5.3.4",
    "metroculus-client",
    "optscale-data",
    "optscale-time",
    "pymongo==4.6.3",
    "restapi-client",
]

[tool.uv.sources]
cloud-adapter = { path = "../tools/cloud_adapter", editable = true }
optscale-data = { path = "../tools/optscale_data", editable = true }
optscale-time = { path = "../tools/optscale_time", editable = true }
config-client = { path = "../optscale_client/config_client", editable = true }
herald-client = { path = "../optscale_client/herald_client", editable = true }
insider-client = { path = "../optscale_client/insider_client", editable = true }
metroculus-client = { path = "../optscale_client/metroculus_client", editable = true }
restapi-client = { path = "../optscale_client/rest_api_client", editable = true }

[dependency-groups]
dev = [
    "coverage==4.2",
    "freezegun==0.3.8",
    "mongomock==3.19.0",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ".."
module-name = "bumiworker"
