[project]
name = "metroculus-worker"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "clickhouse-connect==0.8.15",
    "cloud-adapter",
    "config-client",
    "kombu==5.3.4",
    "optscale-data",
    "optscale-time",
    "pymongo==4.6.3",
    "requests==2.32.4",
    "restapi-client",
    "db",
]

[tool.uv.sources]
config-client = { path = "../../optscale_client/config_client", editable = true }
restapi-client = { path = "../../optscale_client/rest_api_client", editable = true }
cloud-adapter = { path = "../../tools/cloud_adapter", editable = true }
optscale-data = { path = "../../tools/optscale_data", editable = true }
optscale-time = { path = "../../tools/optscale_time", editable = true }
metroculus-client = { path = "../../optscale_client/metroculus_client", editable = true }
db = { path = "../../tools/db", editable = true }

[dependency-groups]
dev = [
    "concurrencytest==0.1.2",
    "coverage==4.2",
    "metroculus-client",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "../.."
module-name = "metroculus"
